# embedded-cal

./: Cargo.toml
embedded-cal-nrf54l15/: Cargo.toml
embedded-cal-nrf54l15/src/: descriptor.rs  lib.rs
embedded-cal-software/: Cargo.toml
embedded-cal-software/src/: lib.rs
embedded-cal-software/src/tests/: dummy_sha256.rs
embedded-cal-stm32wba55/: Cargo.toml  memory.x
embedded-cal-stm32wba55/src/: lib.rs
embedded-cal-stm32wba55/tests/: integration.rs
embedded-cal/src/: lib.rs
embedded-cal/src/plumbing/hash/: mod.rs
